crates/finlang-parser/tests/snapshots/error_render__snapshot_unexpected_token_render.snap
---
source: crates/finlang-parser/tests/error_render.rs
expression: rendered
---
error: expected expression, found ';'
  ┌─ test.fin:1:9
  │
1 │ let x = ;
  │         ^ unexpected token here
